--- a/addons/nhan_su/views/nhan_vien.xml
+++ b/addons/nhan_su/views/nhan_vien.xml
@@ -10,11 +10,18 @@
                         <div class="oe_read_only" style="font-size:25px">Nhân viên</div>
                         <group col="4" string="Thông tin chung">
                             <field name="ma_dinh_danh"/>
+                            <field name="ho_va_ten"/>
                             <field name="ngay_sinh"/>
                             <field name="que_quan"/>
                             <field name="email"/>
                         </group>
+                        <notebook>
+                            <page string="Danh sách lịch sử công tác">
+                                <field name="lich_su_cong_tac_ids"/>
+                            </page>
+                        </notebook>
                     </sheet>
+                    
                 </form>
             </field>
         </record>
@@ -25,6 +32,7 @@
             <field name="arch" type="xml">
                 <tree>
                     <field name="ma_dinh_danh"/>
+                    <field name="ho_va_ten"/>
                     <field name="ngay_sinh"/>
                     <field name="que_quan"/>
                     <field name="email"/>
@@ -37,6 +45,7 @@
             <field name="arch" type="xml">
                 <search>
                     <field name="ma_dinh_danh"/>
+                    <field name="ho_va_ten"/>
                     <field name="ngay_sinh"/>
                     <field name="que_quan"/>
                     <field name="email"/>
