--- a/addons/nhan_su/views/nhan_vien.xml
+++ b/addons/nhan_su/views/nhan_vien.xml
@@ -9,8 +9,10 @@
                     <sheet>
                         <div class="oe_read_only" style="font-size:25px">Nhân viên</div>
                         <group col="4" string="Thông tin chung">
-                            <field name="ma_dinh_danh"/>
+                            <field name="ho_ten_dem"/>
+                            <field name="ten"/>
                             <field name="ho_va_ten"/>
+                            <field name="ma_dinh_danh"/>
                             <field name="ngay_sinh"/>
                             <field name="tuoi"/>
                             <field name="que_quan"/>
@@ -20,6 +22,9 @@
                         <notebook>
                             <page string="Danh sách lịch sử công tác">
                                 <field name="lich_su_cong_tac_ids"/>
+                            </page>
+                            <page string="Danh sách chứng chỉ bằng cấp">
+                                <field name="danh_sach_chung_chi_bang_cap_ids"/>
                             </page>
                         </notebook>
                     </sheet>
@@ -34,6 +39,8 @@
             <field name="arch" type="xml">
                 <tree>
                     <field name="ma_dinh_danh"/>
+                    <field name="ho_ten_dem"/>
+                    <field name="ten"/>
                     <field name="ho_va_ten"/>
                     <field name="ngay_sinh"/>
                     <field name="tuoi"/>
