--- a/addons/quan_ly_van_ban/views/menu.xml
+++ b/addons/quan_ly_van_ban/views/menu.xml
@@ -12,5 +12,17 @@
             sequence="1"
             action="action_van_ban_den"
         />
+        <menuitem name="Quản lý văn bản đi" 
+            id="menu_van_ban_di" 
+            parent="menu_root" 
+            sequence="2"
+            action="action_van_ban_di"
+        />
+        <menuitem name="Danh mục loại văn bản" 
+            id="menu_loai_van_ban" 
+            parent="menu_root" 
+            sequence="2"
+            action="action_loai_van_ban"
+        />
     </data>
 </odoo>
